--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "postbuild": "pagecrypt ./build/private-portfolio/index.html ./build/private-portfolio/index.html 1520"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
@@ -23,7 +24,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1"
+    "@docusaurus/module-type-aliases": "2.0.1",
+    "pagecrypt": "^5.4.0"
   },
   "browserslist": {
     "production": [
