--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 ridzwan:
   name: Ridzwan
   title: Product Designer
-  url: https://twitter.com/ridzwan.design
+  url: https://twitter.com/ridzwanharon
   image_url: http://ridzwan.design/img/ridzwan.jpeg
   
